--- a/src/main.css
+++ b/src/main.css
@@ -19,6 +19,11 @@ html, body {
 	}
 }
 
+nav, demo-menu {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
 h1, h2, p {
 	font: inherit;
 	font-size: 100%;
