--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,7 @@ html, body {
 	padding: 0;
 	font-size: 14px;
 	line-height: 1.3125;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 	-webkit-text-size-adjust: 100%;
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 	box-sizing: border-box;
@@ -24,7 +24,25 @@ nav, demo-menu {
 	margin-bottom: 10px;
 }
 
-h1, h2, p {
+h1, h2, h3 {
+    margin-bottom: .5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.2;
+    color: inherit;
+}
+
+h2 {
+	font-size: 1.5rem;
+    border-bottom: 5px solid darkgrey;
+    line-height: 2em;
+}
+
+h3 {
+	font-size: 1.15rem;
+}
+
+p {
 	font: inherit;
 	font-size: 100%;
 	margin: 0;
